# eventsourcing-eventstoredb

./: Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: github-actions.yml
eventsourcing_eventstoredb/: __init__.py  factory.py  recorders.py
eventsourcing_kurrentdb/: __init__.py  factory.py  recorders.py
tests/: common.py  test_application.py  test_docs.py  test_factory.py  test_noninterleaving_notification_ids.py  test_projection.py  test_recorders.py
tests/stringids/: application.py  domainmodel.py  test_application.py  test_projection.py
